--- a/scripts/Fec_perFem_norms.Rmd
+++ b/scripts/Fec_perFem_norms.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "PerFemaleFecundity"
+title: "Per Female Fecundity"
 author: "Enoch Ng'oma"
 date: "4/14/2020"
 output: html_document
@@ -138,7 +138,7 @@ fcd <- fcd.t
 min(fcd$alive,na.rm=TRUE)
 which(is.na(fcd$alive))
 fcd[which(fcd$alive<0),]
-hist(fcd[which(fcd$alive<0),'alive'])
+#hist(fcd[which(fcd$alive<0),'alive'])
 
 hist(fcd$alive)
 
@@ -192,7 +192,7 @@ pp <- ggplot(collapse.dat,aes(x=treat,y=mean_eggs, col=treat)) +
   my_theme
 pp + theme(legend.position = "none")
 
-ggsave(pp, filename="~/MyGithub/early_experience/Plots/lifetime_eggs_perF_per3HR.pdf", height=4, width=4)
+#ggsave(pp, filename="~/MyGithub/early_experience/Plots/lifetime_eggs_perF_per3HR.pdf", height=4, width=4)
 
 # Plot time series of eggs per female per 3-hr sampling period
 qq <- ggplot(collapse.dat,aes(x=age,y=mean_eggs, col=treat)) +
@@ -206,7 +206,7 @@ qq <- ggplot(collapse.dat,aes(x=age,y=mean_eggs, col=treat)) +
   my_theme
 qq + theme(legend.position=c(0.7,1))
 
-ggsave(qq, filename="~/MyGithub/early_experience/Plots/Eggs_perF_per3HR_timeseries.pdf", height=4, width=4)
+#ggsave(qq, filename="~/MyGithub/early_experience/Plots/Eggs_perF_per3HR_timeseries.pdf", height=4, width=4)
 
 
 # Plot time series of eggs per female per 3-hr sampling period
@@ -228,20 +228,6 @@ dat[which(dat$eggpFemDay<1 & dat$age<36),]
 
 spot.check <- rbind(dat[which(dat$eggpFemDay>10),],dat[which(dat$eggpFemDay<1 & dat$age<36),])
 ```
-
-# A faceted figure
-```{r}
-# Use facet_grid or facet_wrap to split up graphs by factors
-ggplot(mydata, aes(Var1, Var2)) + geom_point() + facet_grid(~ Variety)
-```
-
-
-# Use new counts to see what changes
-
-```{r}
-
-```
-
 
 # Investigate recounts of 31 images
 
