--- a/scripts/ee_cph_model.Rmd
+++ b/scripts/ee_cph_model.Rmd
@@ -16,6 +16,7 @@ library(forcats)
 library(car)
 library(broom)
 library(AICcmodavg)
+library(sjPlot)
 
 # library(sjPlot)
 # library(sjmisc)
@@ -78,13 +79,13 @@ mod1.2b <- coxph(Surv(age, status) ~
 summary(mod1.2b)
 cox.zph(mod1.2b)
 #ggsurvplot(survfit(mod1.2b),eelife, conf.int = TRUE)
-
+library(MuMIn)
 
 mod1.3 <- coxph(Surv(age, status) ~  larvalTreat + strata(adultTreat) + 
                    larvalTreat*adultTreat + larv_adult*strata(sex), 
                 data = eelife)
 summary(mod1.3)
-autoplot(mod1.3)
+#autoplot(mod1.3)
 anova(mod1.3)
 #ggsurvplot(survfit(mod1.3),eelife, conf.int = TRUE)
 
@@ -131,13 +132,13 @@ summary(mod1.8)
 car::Anova(mod1.8, type="II")
 # car::Anova(mod1.2, type="III"); use only if no interactions are involved
 
-anova(mod1.2b, mod1.3)
+#anova(mod1.2b, mod1.3)
 # cageID can be ignored
 # Note: mod1.1 and mod1.3 are the same (i.e. cluster(cageID for coxph
 # is same as (1 | cageID for coxme)))
 # So, interpret mod1.1
 
-tab_model(mod1.0, mod1.1,mod1.2, mod1.3, file="AllDataMods.doc")
+#tab_model(mod1.0, mod1.1,mod1.2, mod1.3, file="AllDataMods.doc")
 
 ```
 
@@ -178,22 +179,7 @@ aictab(list(mod2.0, mod2.1, mod2.2, mod2.3))
 # Support to ignore cage
 # Suggest the larv*adult interaction not so important
 
-tab_model(mod2.0, mod2.1, mod2.2,mod2.3, file="FemaleMods.doc")
-
-#############
-
-# Model averaging - not used ##
-library(MuMIn)
-# femAvg <- model.avg(list(mod2.2, mod2.3), 
-#                     beta = c("none", "sd", "partial.sd"),
-#                     data=eelifeF, options(na.action = "na.fail"))
-# summary(femAvg)
-# femSel <- model.sel(list(mod2.2, mod2.3), 
-#                     beta = c("none", "sd", "partial.sd"),
-#                     data=eelifeF, options(na.action = "na.fail"))
-# summary(femSel)
-
-get.models(femSel, subset = TRUE)
+#tab_model(mod2.0, mod2.1, mod2.2,mod2.3, file="FemaleMods.doc")
 
 ```
 
